# redlock-fifo

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
redlock_fifo/: __init__.py  extendable_redlock.py  extensible_redlock.py  fifo_redlock.py
tests/: test_extendable_redlock.py  test_extensible_redlock.py  test_fifo_redlock.py  testutils.py
