[metadata]
name = redlock-fifo
description = True FIFO locks based on redlock-py
url = https://github.com/internap/redlock-fifo
author = Internap
author_email = opensource@internap.com
classifier =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 2.7

[files]
packages =
    redlock_fifo

[bdist_wheel]
universal = 1

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
verbosity = 2
