[metadata]
name = redlock-fifo
description = True FIFO locks based on redlock-py
url = https://github.com/internap/redlock-fifo
author = Internap
author_email = opensource@internap.com
license = Apache-2
classifier =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.4

[files]
packages =
    redlock_fifo

[bdist_wheel]
universal = 1

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
verbosity = 2
